client/src/stylesheets/game/modals/CardModal.scss
.card-modal {
  border: 0.125rem solid $light-shade;
  background-color: $dark-shade;
  width: 35vw;
  height: 30vh;
}

.title-wrapper {
  height: 4rem;
  background-color: $dark-accent;
}

.title {
  padding: 0;
  @include make-center;

  p {
    margin-bottom: 0;
    justify-content: center;
    align-items: center;
    color: $dark-shade;
    font-size: $font-large;
    font-weight: $bold;
  }
}

.cards-wrapper {
  background-color: $light-shade-05;
  overflow-y: hidden;
  height: 100%;
}

.cards {
  padding: 0;
  overflow-y: scroll;
  @include disable-scroll;
  height: 100%;
  background-color: $dark-shade;
}

.confirm-wrapper {
  padding: 1rem 0.5rem;
}

.confirm {
  @include expand;
  padding: 0;
  @include make-center;
  flex-direction: column;
}

.confirm-text {
  color: $dark-accent;
}

button {
  @include space-button-modal;
  margin: 0;
}

